<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvSettingsDefineNumberOfReminders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/define_number_of_reminders"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/bSettingsNumberOfRemindersMinus"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="settingsClick"
       		android:contentDescription="button"
            android:text="-" />

        <TextView
            android:id="@+id/tvSettingsNumberOfReminders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="2"
            android:text="1"
            android:textSize="24dp" />

        <Button
            android:id="@+id/bSettingsNumberOfRemindersPlus"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:onClick="settingsClick"
       		android:contentDescription="button"
            android:layout_weight="1"
            android:text="+" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_interval"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/begin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
         <Button
            android:id="@+id/bSettingsIntervalBeginMinus"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="settingsClick"
       		android:contentDescription="button"
            android:text="-" />

        <TextView
            android:id="@+id/tvSettingsIntervalBegin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="2"
            android:text="8"
            android:textSize="24dp" />

        <Button
            android:id="@+id/bSettingsIntervalBeginPlus"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:onClick="settingsClick"
       		android:contentDescription="button"
            android:text="+" />
        
    </LinearLayout>
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
         <Button
            android:id="@+id/bSettingsIntervalEndMinus"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="settingsClick"
       		android:contentDescription="button"
            android:text="-" />

        <TextView
            android:id="@+id/tvSettingsIntervalEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="2"
            android:text="20"
            android:textSize="24dp" />

        <Button
            android:id="@+id/bSettingsIntervalEndPlus"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:onClick="settingsClick"
       		android:contentDescription="button"
            android:text="+" />
        
    </LinearLayout>

    <Button
        android:id="@+id/bSettingsStartThisList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="settingsClick"
        android:contentDescription="button"
        android:layout_marginTop="10sp"
        android:text="@string/start_this_list" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_days"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <CheckBox
        android:id="@+id/cbSettingsAllDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:onClick="settingsClick"
        android:contentDescription="check_box"
        android:text="@string/all_days" />

    <CheckBox
        android:id="@+id/chSettingsMonday"
        android:checked="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="settingsClick"
        android:contentDescription="check_box"
        android:text="@string/monday" />

    <CheckBox
        android:id="@+id/chSettingsTuesday"
        android:checked="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="settingsClick"
        android:contentDescription="check_box"
        android:text="@string/tuesday" />

    <CheckBox
        android:id="@+id/chSettingsWednesday"
        android:checked="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="settingsClick"
        android:contentDescription="check_box"
        android:text="@string/wednesday" />

    <CheckBox
        android:id="@+id/chSettingsThursday"
        android:checked="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="settingsClick"
        android:contentDescription="check_box"
        android:text="@string/thursday" />

    <CheckBox
        android:id="@+id/chSettingsFriday"
        android:checked="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="settingsClick"
        android:contentDescription="check_box"
        android:text="@string/friday" />

    <CheckBox
        android:id="@+id/chSettingsSaturday"
        android:checked="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="settingsClick"
        android:contentDescription="check_box"
        android:text="@string/saturday" />

    <CheckBox
        android:id="@+id/chSettingsSunday"
        android:checked="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="settingsClick"
        android:contentDescription="check_box"
        android:text="@string/sunday" />

</LinearLayout>
</ScrollView>